--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -17,8 +17,8 @@ services:
   hearsay_require_js.module_formula_loader:
     class: %hearsay_require_js.module_formula_loader.class%
     arguments:
-      - @assetic.asset_factory
-      - @hearsay_require_js.namespace_mapping
+      - "@assetic.asset_factory"
+      - "@hearsay_require_js.namespace_mapping"
     tags:
       - { name: assetic.formula_loader, alias: require_js }
 
@@ -35,8 +35,8 @@ services:
   hearsay_require_js.configuration_builder:
     class: %hearsay_require_js.configuration_builder.class%
     arguments:
-      - @service_container
-      - @hearsay_require_js.namespace_mapping
+      - "@service_container"
+      - "@hearsay_require_js.namespace_mapping"
       - %hearsay_require_js.base_url%
       - %hearsay_require_js.shim%
     public: false
@@ -44,8 +44,8 @@ services:
   hearsay_require_js.templating_helper:
     class: %hearsay_require_js.templating_helper.class%
     arguments:
-      - @templating
-      - @hearsay_require_js.configuration_builder
+      - "@templating"
+      - "@hearsay_require_js.configuration_builder"
       - %hearsay_require_js.initialize_template%
       - %hearsay_require_js.require_js_src%
     tags:
@@ -54,8 +54,8 @@ services:
   hearsay_require_js.twig_extension:
     class: %hearsay_require_js.twig_extension.class%
     arguments:
-      - @service_container
-      - @hearsay_require_js.configuration_builder
+      - "@service_container"
+      - "@hearsay_require_js.configuration_builder"
     tags:
       - { name: twig.extension }
 
