--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+### IntelliJ
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dataSources/*
+.idea/dataSources.xml
+.idea/dataSources.ids
+.idea/dataSources.local.xml
+.idea/sqldialects.xml
+.idea/jsLinters
+atlassian-ide-plugin.xml
+
 vendor/
 composer.lock
 composer.phar
